Navi: Update Google Apps chooser to more closely match mocks.

Followup CLs will address other visual issues to avoid over-complicating this CL

Bug: 874118
Change-Id: I709fa1165e11444899f1efa5cf23270a1fb2ae6b
Reviewed-on: https://chromium-review.googlesource.com/c/1226464
Commit-Queue: Hector Carmona <hcarmona@chromium.org>
Reviewed-by: Scott Chen <scottchen@chromium.org>
Cr-Commit-Position: refs/heads/master@{#596053}
Former-commit-id: 10cc2033a7afeaf0b384dc4c5a7e81bbaa8edbff